--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/icon-48x48.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Revolut test task (by Dmitiriy Korneev)"
     />
+    <link rel="preload" as="font" href="%PUBLIC_URL%/fonts/FuturaNewBold.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="%PUBLIC_URL%/fonts/FuturaNewBook.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="%PUBLIC_URL%/fonts/FuturaNewLight.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" as="font" href="%PUBLIC_URL%/fonts/FuturaNewMedium.woff2" type="font/woff2" crossorigin="anonymous">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Revolut test task (by Dmitiriy Korneev)</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
