--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,9 @@
       name="description"
       content="Revolut test task (by Dmitiriy Korneev)"
     />
-    <link rel="preload" href="%PUBLIC_URL%/styles/index.css" as="style" onload="this.rel='stylesheet'">
-    <link rel="preload" as="font" href="%PUBLIC_URL%/fonts/FuturaNewBold.woff2" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" as="font" href="%PUBLIC_URL%/fonts/FuturaNewBook.woff2" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" as="font" href="%PUBLIC_URL%/fonts/FuturaNewLight.woff2" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" as="font" href="%PUBLIC_URL%/fonts/FuturaNewMedium.woff2" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="%PUBLIC_URL%/styles/index.css" as="style" onload="this.rel='stylesheet'">
+    <link rel="preload" as="font" href="%PUBLIC_URL%/fonts/FuturaNewBook.woff2" type="font/woff2" crossorigin="anonymous">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
