--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/icon-48x48.png" />
+    <link rel="icon" href="%PUBLIC_URL%/icons/logo48.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Revolut test task (by Dmitiriy Korneev)"
     />
+    <link rel="preload" as="font" href="%PUBLIC_URL%/fonts/Roboto.woff2" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" as="font" href="%PUBLIC_URL%/fonts/FuturaNewBook.woff2" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="%PUBLIC_URL%/styles/index.css" as="style" onload="this.rel='stylesheet'">
-    <link rel="preload" as="font" href="%PUBLIC_URL%/fonts/FuturaNewBook.woff2" type="font/woff2" crossorigin="anonymous">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
